--- a/tex/config/fonts.tex
+++ b/tex/config/fonts.tex
@@ -22,10 +22,15 @@
 \newfontfamily\fanciestfont{Libertinus Serif Display}
 \newfontfamily\fancyfont{Libertinus Serif Display}
 \newfontfamily\chapternumberfont{Libertinus Serif Display}
+\newfontfamily\sansfont{Libertinus Sans}
 
-\addtokomafont{disposition}{\fancyfont}
-\addtokomafont{title}{\fanciestfont}
-\addtokomafont{chapter}{\fanciestfont}
+\addtokomafont{disposition}{\normalfont}
+\addtokomafont{title}{\normalfont}
+\addtokomafont{chapter}{\normalfont\bfseries}
 \addtokomafont{chapterentry}{\normalfont\scshape}
 \addtokomafont{descriptionlabel}{\normalfont\bfseries}
 \addtokomafont{caption}{\footnotesize}
+
+\addtokomafont{section}{\bfseries}
+\addtokomafont{subsection}{\bfseries}
+\addtokomafont{paragraph}{\bfseries}
