--- a/astro-2.tex
+++ b/astro-2.tex
@@ -1,5 +1,6 @@
 \documentclass[parskip=half,
-               fontsize=10pt]{scrbook}
+               fontsize=10pt,
+               headings=big]{scrbook}
 
 \author{Thomas Birbacher}
 \title{Astrophysics II}
