--- a/tex/main/03-linear-perturbations.tex
+++ b/tex/main/03-linear-perturbations.tex
@@ -204,6 +204,8 @@ We also have to take into account the expansion of the universe, which we neglec
 
 
 \section{Collisionless gas}
+\label{sec:collisionless-gas}
+
 We now consider a collisionless gas, such as dark matter. In this case, there is no reason to impose thermodynamic equilibrium, not even locally. As a result, we cannot describe the gas with the thermodynamic variables we used before, since they are only defined in (at least local) thermodynamic equilibrium. We thus need to take one step back and consider distribution functions $f(\vec{x}, \vec{p}, t)$, whose dynamics are given by the collisionless Boltzmann equation,
 \begin{align*}
 	\dv{f}{t}
@@ -220,7 +222,7 @@ with the comoving number density $n(\vec{x}, t) = \int \dd{^3p} f(\vec{x}, \vec{
 	\item The bulk velocity $\langle v_i \rangle$ can be obtained with $Q = v_i = p_i/(m n)$
 \end{itemize}
 
-We take moments of the Boltzmann equation. One can show that one gets the same equations as the fluid equations: the continuity equation and the Euler equation, with the pressure gradient term replaced as follows:
+We take moments of the Boltzmann equation. One can show\sidenote{For more details, have a look at \cref{ssec:jeans-equation}.} that one gets the same equations as the fluid equations: the continuity equation and the Euler equation, with the pressure gradient term replaced as follows:
 \begin{align*}
 	\frac{\Grad_i p}{\rho}
 	\to \sum_{j=1}^3 \pdv{}{x_j}
