--- a/tex/main/04-nonlinear-perturbations.tex
+++ b/tex/main/04-nonlinear-perturbations.tex
@@ -173,7 +173,8 @@ Depending on the cosmological models, the overdensity $\delta_c$ required for co
 
 \section{Collisionless dynamics}
 
-% aka stellar dynamics
+\subsection{Time scales}
+\label{ssec:time-scales}
 
 In the previous chapter, we assumed a collisionless medium. To find out when this approximation is valid, we look at the collision time-scales in thermodynamic equilibrium.
 
@@ -225,10 +226,12 @@ For example, in a galaxy we have $r \approx \SI{10}{\kilo\parsec}$, $v \approx \
 \end{align*}
 Gravitational collisions are apparently very inefficient and can be neglected for these systems, so we can use the collisionless Boltzmann equation. Instead of analysing two-body forces, we can use a smooth mean gravitational potential.
 
+\subsection{Basic Dynamics}
+
 We now look at the collisionless Boltzmann equation (CBE), with a phase-space distribution function $f(\vec{x}, \vec{v}, t)$.
 As we've seen before, the moments of $f$ are
 \begin{itemize}
-	\item $n(\vec{x}, t) = \int f(\vec{x}, \vec{v}, t) \dd{^3v} = p(\vec{x}, t)/m$
+	\item $n(\vec{x}, t) = \int f(\vec{x}, \vec{v}, t) \dd{^3v} = \rho(\vec{x}, t)/m$
 	\item $\avg{Q}(\vec{x}, t) = \frac{1}{n} \int \dd{^3v} Q f(\vec{x}, \vec{v}, t)$
 \end{itemize}
 The evolution of the distribution function is given by the CBE,
@@ -243,28 +246,38 @@ which can be rewritten with $v_i = \dv*{x_i}{t}$ and $\dv*{v_i}{t} = - \pdv*{\Ph
 \end{align*}
 where the gravitational potential can be calculated from the Poisson equation, $\Lap \Phi = 4 \pi G \rho$.
 
-We can take moments of the CBE to get
+\subsection{Equations of motion}
+\label{ssec:collisionless-eom}
+
+We multiply the CBE by $Q$ and integrate over $\vec{v}$ to get
 \begin{align*}
 	\pdv{}{t} [n \avg{Q}]
 	+ \sum_{i} \pdv{}{x_i}[n \avg{Q v_i}]
 	+ n \sum_{i} \pdv{\Phi}{x_i} \avg{ \pdv{Q}{v_i} }
 	= 0,
 \end{align*}
-where we used partial integration to obtain the last term. If we take $Q = 1$, we get
+where the last term follows from partial integration and from $f=0$ for $v^2 \to \infty$.
+It turns out that we can completely recover something that looks almost identical to the ideal fluid equations, just by substituting cleverly for $Q$.
+\sidenote{We have already seen this in \cref{sec:collisionless-gas}, but we didn't prove the result.}
+
+\paragraph*{Continuity equation}
+If we set $Q = 1$, we get
 \begin{align*}
 	\pdv{n}{t} + \sum_{i} \pdv{}{x_i} [n \avg{v_i}]
 	= 0,
 \end{align*}
 which we recognize as the continuity equation of an ideal fluid, with $n$ instead of $\rho$.
 
+\paragraph*{Euler equation}
 For $Q = v_j$, we obtain
-\begin{align*}
+\begin{align}
+	\label{eq:euler-collisionless}
 	\pdv{}{t}[n \avg{v_j}]
 	+ \sum_{i} \pdv{}{x_i} [n \avg{v_i v_j}]
 	+ n \pdv{\Phi}{x_j}
 	= 0.
-\end{align*}
-Again, we define
+\end{align}
+We remember the definition\sidenote{We have previously defined the stress tensor as $\rho \sigma_{ij}^2$, but we will see the quantity $n \sigma_{ij}^2$ appear now. It does not matter much, because we can convert with $n = \rho/m$.}
 \begin{align*}
 	\sigma_{ij}^2 = \avg{v_i v_j} - \avg{v_i} \avg{v_j}
 \end{align*}
@@ -286,84 +299,155 @@ to get
 	+ n \sum_{i} \pdv{}{x_i} [n \sigma_{ij}^2]
 	+ \sum_{i} n \avg{v_i} \pdv{}{x_i} \avg{v_j}
 	+ n \pdv{\Phi}{x_j}
-	&& \text{continuity equation}
+	\qquad \text{(continuity equation)}
 	\\
 	&= \pdv{\avg{v_j}}{t}
 	+ \sum_{i} \avg{v_i} \pdv{\avg{v_j}}{x_i}
 	+ \frac{1}{n} \sum_{i} \pdv{(n \sigma_{ij}^2)}{x_i}
 	+ \pdv{\Phi}{x_i}
 \end{align*}
-which is the Euler equation, but with $n \sigma_{ij}^2$ instead of $p$ and $n$ instead of $\rho$. We already stated this result in the previous chapter, and now we have proven it. The equation in this form is called the \emph{Jeans equation}.
+This is the Euler equation, but with $n \sigma_{ij}^2$ instead of $p$, and $n$ instead of $\rho$. We already stated this result in the previous chapter, and now we have proven it. The equation in this form is called the \emph{Jeans equation}.
 
+\paragraph*{Discussion}
 If we take the Jeans equation, the continuity equation, and the Poisson equation, we have a total of five equations in the 11 unknowns $\rho$, $v_i$, $\sigma_{ij}$ (6, because it is symmetric) and $\rho$. Evidently, we have too many unknowns. We could try to take higher moments of the CBE, but this only adds more unknowns in the end. In order to close the system, we need more assumptions.\sidenote{We didn't have this problem for an ideal fluid, because the equation of state was used.}
 
 
 
 
 \section{Virial theorem}
-Consider a localized self-gravitating collisionless system in a steady state, such as an isolated galaxy. A steady state means that the distribution function does not depend on time, but only on $\vec{x}$ and $\vec{v}$.
+% Consider a localized self-gravitating collisionless system in a steady state, such as an isolated galaxy. A steady state means that the distribution function does not depend on time, but only on $\vec{x}$ and $\vec{v}$.
 
-The Euler equation for such a system is
+\paragraph*{Tensor Virial theorem.}
+For a self-gravitating collisionless system,\sidenote{The Virial theorem is also valid for a self-gravitating ideal fluid, since its derivation relies on the equations from \cref{ssec:collisionless-eom}, which are basically the same as the ideal fluid equations.}
+\begin{align*}
+	\frac{1}{2}
+	\dv[2]{I_{jk}}{t}
+	&= 2 K_{jk} + W_{jk} + \Sigma_{jk},
+\end{align*}
+where we have defined
+\begin{align*}
+	I_{jk}
+	&= \int \rho x_j x_k \dd{^3 \vec{x}}
+	&&\text{moment of inertia tensor}\\
+	K_{jk}
+	&= \frac{1}{2} \int \rho \avg{v_j v_k} \dd{^3 \vec{x}}
+	&&\text{kinetic energy tensor}\\
+	W_{jk}
+	&= - \int \rho x_k \pdv{\Phi}{x_j} \dd{^3 \vec{x}}
+	&&\text{Chandrasekhar potential energy tensor}\\
+	\Sigma_{jk}
+	&= - \sum_i \int x_k \rho \avg{v_j v_i} \dd{S_i}
+	&&\text{surface pressure term}
+\end{align*}
+
+We start the derivation with the Euler equation (\ref{eq:euler-collisionless}),
 \begin{align*}
 	0
 	&= \pdv{}{t} [n \avg{v_j}]
 	+ \sum_{i} \pdv{}{x_i} [n \avg{v_i v_j}]
-	+ n \pdv{\Phi}{x_j}\\
-	&= \sum_{i} \pdv{}{x_i} [n \avg{v_i v_j}]
-	+ n \pdv{\Phi}{x_j}
-	&&\text{steady state:} \pdv*{f}{t} = 0
+	+ n \pdv{\Phi}{x_j},\\
+	% &= \sum_{i} \pdv{}{x_i} [n \avg{v_i v_j}]
+	% + n \pdv{\Phi}{x_j}
+	% &&\text{steady state:} \pdv*{f}{t} = 0
 \end{align*}
-We multiply the equation by $- \int \dd{^3x} m x_k$ and recall $\rho = n m$ to get
+which we multiply by $m x_k$ and integrate over space to get
 \begin{align*}
-	0
-	&= - \sum_{i} \int x_k \pdv{[\rho \avg{v_i v_j}]}{x_i} \dd{^3 x}
-	   - \int \rho x_k \pdv{\Phi}{x_j} \dd{^3 x}
+	\int x_k \pdv{[\rho\avg{v_j}]}{t} \dd{^3 \vec{x}}
+	&= - \sum_i \int x_k \pdv{[\rho \avg{v_i v_j}]}{x_i} \dd{^3 x}
+	- \int  \rho x_k \pdv{\Phi}{x_j} \dd{^3 x}.
 \end{align*}
-We define $2 K_{jk}$ as the first term, and $W_{jk}$ as the second term, so $2 K_{jk} + W_{jk} = 0$.
-The first term can be written using the product rule as
+The first term on the right-hand side can be rewritten with the divergence theorem as
 \begin{align*}
-	&- \sum_{i} \int \dd{^3 x} \left[
-		\pdv{}{x_i} \left( x_k \rho \avg{v_i v_j} \right) 
-		- \pdv{x_k}{x_i} \rho \avg{v_i v_j}
-	\right]\\
-	&= \sum_{i} \left[
-       \oint \dd{S_i} x_k \rho \avg{v_i v_j}
-	   - \int \dd{^3 x} \delta_{ik} \rho \avg{v_i v_j}
-	   \right]
-	&&\text{divergence theorem}\\
-	&= - \sum_{i} \int \dd{^3 x} \delta_{ik} \rho \avg{v_i v_j}
-	&&\rho = 0 \text{ at border}
+	- \sum_i \int x_k \pdv{[\rho \avg{v_i v_j}]}{x_i} \dd{^3 x}
+	&= 2 K_{kj} + \Sigma_{kj}.
 \end{align*}
-By taking the trace of $2 K_{jk} + W_{jk} = 0$, we get
+The last term on the right-hand side is the Chandrasekhar potential energy tensor. With the continuity equation, one can show that the left-hand side is equal to the moment of inertia tensor. Putting everything together, we get
 \begin{align*}
-	2 K + W = 0,
+	\frac{1}{2}
+	\dv[2]{I_{jk}}{t}
+	&= 2 K_{jk} + W_{jk} + \Sigma_{jk},
 \end{align*}
-where
-\begin{align*}
-	K
-	&= \tr(K_{ij})
-	= \frac{1}{2} \int \dd{^3x} \rho \avg{v^2},\\
-	W &= \tr(W_{ij})
-	= - \int \dd{^3 x} \rho \vec{x} \cdot \Grad \Phi
-	= \frac{1}{2} \int \dd{^3 x} \rho \Phi,
-\end{align*}
-which can be shown to be the kinetic and the potential energy of the system, respectively.
-Since the total energy of the system is $E = K + W$, we finally obtain
-\begin{align*}
-	2 K + W = 0,
-\end{align*}
-which is Virial theorem. It is also commonly written as $E = - K = W/2$. We call a system virialized if the Virial theorem is valid.
 
-The Virial theorem can be used to estimate the total mass of a system. Note that $K \approx M \bar{v}^2/2$, where $M$ is the total mass of the system, and $\bar{v}$ is the average velocity of the particles. Also, $W \approx -GM^2/R$, where $R$ is the diameter of the system. The Virial theorem yields
+
+\paragraph*{Scalar Virial theorem.}
+From the tensor Virial theorem, we can derive the scalar Virial theorem,
 \begin{align*}
-	\bar{v}^2 \approx \frac{GM}{R}.
+	\frac{1}{2} \dv[2]{I}{t}
+	&= 2 K + W + \Sigma,
 \end{align*}
-This can be used to estimate the mass of a system from measurements of $\bar{v}$ and $R$.
+where $X = \tr(X_{ij})$. One can show that $K$ and $W$ are the kinetic and potential energy of the system.
+
+\paragraph*{Static, localized system.}
+For a system in a steady state, meaning that the distribution function does not depend on time, but only on $\vec{x}$ and $\vec{v}$, the derivative of the moment of inertia tensor is zero. If we also assume that the system is isolated, the surface pressure term is zero. This yields
+\begin{align*}
+	2 K + W &= 0,
+	\qquad \text{or equivalently,} \qquad
+	E = - K = \frac{W}{2},
+\end{align*}
+where $E$ is the total energy of the system.
 
 
 
 
-This can be applied to the spherical collapse model.
+% We multiply the equation by $- \int \dd{^3x} m x_k$ and recall $\rho = n m$ to get
+% \begin{align*}
+% 	0
+% 	&= - \sum_{i} \int x_k \pdv{[\rho \avg{v_i v_j}]}{x_i} \dd{^3 x}
+% 	   - \int \rho x_k \pdv{\Phi}{x_j} \dd{^3 x}
+% \end{align*}
+% We define $2 K_{jk}$ as the first term, and $W_{jk}$ as the second term, so $2 K_{jk} + W_{jk} = 0$.
+% The first term can be written using the product rule as
+% \begin{align*}
+% 	2 K_{ij}
+% 	&=- \sum_{i} \int \dd{^3 x} \left[
+% 		\pdv{}{x_i} \left( x_k \rho \avg{v_i v_j} \right) 
+% 		- \pdv{x_k}{x_i} \rho \avg{v_i v_j}
+% 	\right]\\
+% 	&= - \sum_{i} \left[
+%        \oint \dd{S_i} x_k \rho \avg{v_i v_j}
+% 	   - \int \dd{^3 x} \delta_{ik} \rho \avg{v_i v_j}
+% 	   \right]
+% 	&&\text{divergence theorem}\\
+% 	&= - \sum_{i} \int \dd{^3 x} \delta_{ik} \rho \avg{v_i v_j}
+% 	&&\rho = 0 \text{ at border}
+% \end{align*}
+% By taking the trace of $2 K_{jk} + W_{jk} = 0$, we get
+% \begin{align*}
+% 	2 K + W = 0,
+% \end{align*}
+% where
+% \begin{align*}
+% 	K
+% 	&= \tr(K_{ij})
+% 	= \frac{1}{2} \int \dd{^3x} \rho \avg{v^2},\\
+% 	W &= \tr(W_{ij})
+% 	= - \int \dd{^3 x} \rho \vec{x} \cdot \Grad \Phi
+% 	= \frac{1}{2} \int \dd{^3 x} \rho \Phi,
+% \end{align*}
+% which can be shown to be the kinetic and the potential energy of the system, respectively.
+% Since the total energy of the system is $E = K + W$, we finally obtain
+% \begin{align*}
+% 	2 K + W = 0,
+% \end{align*}
+% which is Virial theorem. It is also commonly written as $E = - K = W/2$. We call a system virialized if the Virial theorem is valid.
+
+
+\paragraph*{Application: Mass estimation.}
+We consider a system composed of many collisionless particles\sidenote{We have seen in \cref{ssec:time-scales} that this is an excellent approximation for many systems, such as galaxies and clusters.} with total mass $M$, average particle velocity $v$, and diameter $R$.
+The kinetic and potential energy can be estimated as
+\begin{align*}
+	K &\approx \frac{M v^2}{2},&
+	W &\approx - \frac{G M^2}{R},
+\end{align*}
+which can be plugged into the Virial theorem to give
+\begin{align*}
+	v^2 \approx \frac{G M}{R}.
+\end{align*}
+Since the radius can be estimated from images, and the average velocity can be estimated from measurements of the Doppler shift, this method is useful for estimating the mass of a system, which is otherwise hard to access experimentally. 
+
+
+\paragraph*{Application: Spherical collapse model.}
+The Virial theorem can be applied to the spherical collapse model.
 % TODO figure again
 Let $E = K + W$ be the conserved total energy of the sphere.
 
@@ -406,7 +490,9 @@ We want to find solutions of the CBE which are steady states, meaning we want $f
 	&= \sum_{i} \pdv{f}{x_i} \dv{x_i}{t}
 	+ \sum_{i} \pdv{f}{v_i} \dv{v_i}{t}.
 \end{align*}
-We consider integrals of motion, which are functions $I(\vec{x}, \vec{v})$ that are constant along particle trajectories.
+
+\subsection{Integrals of motion}
+Integrals of motion are functions $I(\vec{x}, \vec{v})$ that are constant along particle trajectories.
 Examples of such functions are energy and angular momentum.
 For integrals of motion,
 \begin{align*}
@@ -417,19 +503,148 @@ For integrals of motion,
 Thus, integrals of motion are solutions of the CBE.
 Conversely, a distribution function $f$ which is a function of integrals of motion, written as
 \begin{align*}
-	f(\vec{x}, \vec{v}) = f(I_1(\vec{x}, \vec{v}), \dots, I_N(\vec{x}, \vec{v})),
+	f(\vec{x}, \vec{v}) = f[I_1(\vec{x}, \vec{v}), \dots, I_N(\vec{x}, \vec{v})],
 \end{align*}
 is necessarily a steady-state solution of the CBE.
 
-Thus, all solutions of the steady state CBE depend on $\vec{x}$ and $\vec{v}$ through integrals of motion. This result is called \emph{Jean's theorem}.
+\paragraph*{Jean's theorem}
+All solutions of the steady state CBE depend on $\vec{x}$ and $\vec{v}$ through integrals of motion.
 
-There are some special cases.
+\subsection{Spherical models}
+We now analyse spherically symmetric solutions, where $\rho$ only depends on a radius $r$, and where $f$ only depends on the specific energy of a particle.
+First, we derive some general properties, and then we consider particular models.
 
-One is a spherical solution where $f$ only depends on the specific energy of a particle,
+\paragraph*{General spherical model}
+The specific energy of a particle is
 \begin{align*}
 	E = \frac{1}{2} v^2 + \Phi(\vec{x}).
 \end{align*}
-We can relate $f(E)$ to the density profile $\rho(r)$ of the system.
+We can relate $f(E)$ to the density profile $\rho(r)$ of the system. We define
+\begin{align*}
+	\Psi = - \Phi + \Phi_0, \qquad
+	\epsilon = - E + \Phi_0,
+\end{align*}
+where we demand $\Phi \to \Phi_0$ at the boundary of the system. One can show that
+\begin{align*}
+	\rho(\Psi)
+	&= 4 \pi \int_0^\Psi f(\epsilon) \sqrt{2(\Psi - E)} \dd{\epsilon}.
+\end{align*}
+To find $\rho(r)$, we solve the Poisson equation for a spherically symmetric system,
+\begin{align*}
+	\frac{1}{r^2} \dv{}{r} \left( r^2 \dv{\Psi}{r} \right)
+	&= - 4 \pi G \rho(r).
+\end{align*}
+%Depending on the shape of $\Psi(r)$, an analytical solution may or may not be possible.
+Conversely,
+\begin{align*}
+	f(\epsilon)
+	= \frac{1}{\pi^2 \sqrt{8}}
+	\dv{}{\epsilon}
+	\int_0^\epsilon \dv{\rho}{\Psi} \frac{\dd{\Psi}}{\sqrt{\epsilon-\Psi}}
+\end{align*}
+
+\paragraph*{Isothermal sphere}
+\begin{align*}
+	f(\epsilon)
+	= \frac{\rho_0/m}{(2\pi\sigma^2)^{3/2}} \exp(\epsilon/\sigma^2),
+\end{align*}
+where $\rho_0$ and $\sigma$ are constants. Then
+\begin{align*}
+	\rho(r) 
+	&= \rho_0 \exp\left( \frac{\Psi}{\sigma^2} \right)\\
+	&=
+	\begin{cases}
+		\rho_0   \Big[ 1 + \Big( \frac{r}{r_0} \Big)^2 \Big]^{-3/2}
+		& \text{if } r \leq 2 r_0,\\
+		\frac{\sigma^2}{2\pi G r^2}
+		& \text{if } r \geq 10 r_0,
+	\end{cases}
+\end{align*}
+where
+\begin{align*}
+	r_0 = \frac{3\sigma}{\sqrt{4\pi G \rho_0}},
+\end{align*}
+which is called the King radius.
+The density profile is shown in % TODO figure
+
+Notes:
+\begin{itemize}
+	\item The expected velocity is independent of $r$, which is the reason why the sphere is called isothermal:
+	\begin{align*}
+		\avg{v^2}
+		&= \frac{1}{\rho} \int \dd{^3v} v^2 f(E)
+		= 3 \sigma^2.
+	\end{align*}
+	\item In the limit where
+	\begin{align*}
+		\rho(r) = \frac{\sigma^2}{2 \pi G r^2},
+	\end{align*}
+	the model is called a singular isothermal sphere, because $\rho\to\infty$ for $r \to 0$.
+	\item The total mass of an isothermal sphere is infinite, because
+	\begin{align*}
+		M(<r)
+		&= 4 \pi \int_0^r \dd{r'} {r'}^2 \rho(r')\\
+		&\propto r^3 \frac{1}{r^2} \propto r,
+	\end{align*}
+	which goes to $\infty$ as $r \to \infty$. In practice, the model has to be cut of at some radius.
+\end{itemize}
+
+
+\paragraph*{King Model}
+\begin{align*}
+	f(\epsilon)
+	&=
+	\begin{cases}
+		\frac{\rho_0/m}{(2 \pi \sigma^2)^{3/2}} \left[ \exp\left( \frac{\epsilon}{\sigma^2} \right) -1 \right]
+		& \text{if } \epsilon > 0\\
+		0
+		& \text{if } \epsilon \leq 0
+	\end{cases}
+\end{align*}
+$\Psi(r)$ and $\rho(r)$ can be computed numerically.
+We can find $\rho(r) = 0$ for $r > r_t$, where $r_t$ is called the tidal radius.
+The mass in this model is finite.
+The model is a good fit for bright elliptical galaxies.
+
+
+\paragraph*{Double power law models}
+\begin{margintable}
+	\footnotesize
+	\begin{tabular}{ll}
+		\toprule
+		$(\alpha, \beta, \gamma)$ & Name\\
+		\midrule
+		$(1,3,1)$ & NFW\\
+		$(1,4,\gamma)$ & Dehnen\\
+		$(1,4,1)$ & Hernquist\\
+		$(1,4,2)$ & Jaffe\\
+		$(2,2,0)$ & Modified isothermal sphere\\
+		$(2,3,0)$ & Modified Hubble\\
+		$(2,4,0)$ & Perfect sphere\\
+		$(2,5,0)$ & Plummer sphere\\
+		\bottomrule
+	\end{tabular}
+	\caption{Several power law models.}
+	\label{tab:power-models}
+\end{margintable}
+\begin{align*}
+	\rho(r)
+	&= \left( \frac{r}{r_0} \right)^{-\gamma}
+	\left[ 1 + \left(\frac{r}{r_0}  \right)^\alpha \right]^{(\gamma-\beta)/\alpha},
+\end{align*}
+where $r_0$, $\alpha$, $\beta$, and $\gamma$ are constants.
+One can show that
+\begin{align*}
+	\rho(r)
+	&=
+	\begin{cases}
+		r - \gamma & \text{for } r \ll r_0,\\
+		r - \beta & \text{for } r \gg r_0.
+	\end{cases}
+\end{align*}
+Several models are shown in \cref{tab:power-models}.
+Haloes and elliptical galaxies are often described by such models.
+The NFW model is used for dark matter haloes.
 
 
 
@@ -439,5 +654,245 @@ We can relate $f(E)$ to the density profile $\rho(r)$ of the system.
 
 
 
+
+
+
+
+
+\section{Collisionless relaxation}
+There are several questions:
+\begin{itemize}
+	\item How does a self-gravitating collisionless system achieve a steady/relaxed state?
+	\item What is the nature of this relaxed state?
+\end{itemize}
+
+In a gas, collisions are very efficient, and quickly drive the gas to thermodynamic equilibrium. For a self-gravitating collisionless systems, however, the situation is much more complicated, because collisions are very inefficient, and they do not drive the system to a relaxed state.
+However, many relaxed systems are observed in astrophysics, such as many galaxies, galaxy clusters, and globular clusters.
+If not collisions, then what has driven the system to a relaxed state?
+There must be other processes responsible for collisionless relaxation.
+
+\subsection{Processes}
+
+\paragraph{Phase mixing.}
+Particles in nearby phase-space regions with slightly different velocities can gradually get out of phase over time. Their orbits get sheared and eventually fill the whole phase space volume, which leads to a new steady state distribution.
+
+\paragraph{Chaotic mixing.}
+If particles are in a region of phase space which have chaotic trajectories, which diverge exponentially and fill up phase space.
+
+\paragraph{Violent relaxation.}
+As the object collapses, there can be a variation in the gravitational potential which can broaden the velocity distribution of the particles. The time scale for this process is small, which is why it's called violent.
+
+\paragraph{Landau damping.}
+The interaction between perturbation waves and particles can transfer energy into the random motion of particles. This is similar to free streaming.
+
+
+
+\subsection{End states}
+
+Can we describe the end state of relaxation with Statistical Mechanics?
+Is it a thermal equilibrium?
+
+In a very broad sense, thermal equilibrium is a state which maximizes the entropy, which is also the most probable state.
+Is this applicable here?
+No, it turns out there is no satisfactory definition of entropy for our systems,
+% attempt to use Boltzmann-H function in book, but it fails
+% weird that something as simple as Newton's law defies entropy ...
+and it is not clear whether the relaxed states we introduced previously are the most probable states.
+As a result, the end state of relaxation cannot be described as thermal equilibrium.
+In practice, we have to use numerical simulations to characterize the relaxed state.
+
+Furthermore, many astrophysical systems cannot be treated as being isolated, since they interact with other systems, such as interactions between galaxies and galaxy mergers.
+This would complicate any attempt at thermostatic analysis even further.
+
+We can, however, describe the properties of these systems statistically using simplified models, and compare them to simulations.
+
+
+\section{Halo Mass Function}
+
+The goal of this section is to predict the number density of dark matter haloes which have formed through gravitational collapse as a function of time.
+
+We consider the linear overdensity field $\delta(\vec{x}, t)$, where we have dropped the subscript \enquote{$\text{lin}$} from previous sections.
+In the linear regime, 
+\begin{align*}
+	\delta(\vec{x},t) = \delta_0(\vec{x}) D(t),
+\end{align*}
+where $\delta_0(\vec{x}) = \delta(\vec{x}, t_0)$ is linearly extrapolated to today, and $D(t)$ is the linear growth factor.
+We adopt a slightly different notation for $D(t)$, normalizing it such that $D(t_0) = 1$.
+We define a smoothed field by convolving with a kernel,
+\begin{align*}
+	\delta_s(\vec{x}, t)
+	&= \int \dd{^3 x'} W(\vec{x}+\vec{x'}; R) \delta(\vec{x'}, t),
+\end{align*}
+where $W(\vec{x}; R)$ is a window function with a characteristic radius $R$, such as a top hat.
+For a top hat window function, then we can associate a characteristic mass
+\begin{align*}
+	M = \frac{4\pi}{3} R^3 \bar{\rho}.
+\end{align*}
+
+For the spherical collapse model, we found that for regions with a smooth density field
+\begin{align*}
+	\delta_s(\vec{x}, R, r) > \delta_c \approx 1.69,
+	&&\text{number for matter dominated universe}
+\end{align*}
+the region will have collapsed to form a virialized object.
+This is what we call a dark matter halo.
+We rewrite this using the linear growth factor.
+Because $\delta_s(\vec{x}, R, t) = \delta_S(\vec{x}, R, t_0) D(t)$, we have
+\begin{align*}
+	\delta_s(\vec{x}, R, t_0)
+	> \delta_c(t),
+\end{align*}
+where we defined $\delta_c(t) = \delta_c / D(t)$.
+
+We try to calculate the probability of collapse.
+Since $\delta$ is a Gaussian field
+($\delta$ is linear with Gaussian initial conditions in our standard model of cosmology),
+the smoothed field is also Gaussian, since the smoothing is a linear process.
+The probability that $\delta_s > \delta_c(t)$ can be written as
+\begin{align*}
+	\Prob(>\delta_c(t))
+	= \int_{\delta_c(t)}^{\infty}
+	\dd{\delta_s}
+	p(\delta_s),
+\end{align*}
+where $\delta_s = \delta_s(t_0)$.
+Since the field is Gaussian,
+\begin{align*}
+	p(\delta_s)
+	\propto
+	\frac{
+		\exp \left[
+			\frac{-\delta_s^2}{2 \sigma^2(M)}
+		\right]
+	}{
+		\sqrt{2\pi} \sigma(M)
+	},
+\end{align*}
+where $\sigma(M)$ is the variance of the smoothed field,
+\begin{align*}
+	\sigma^2(M)
+	&= \avg{\delta_s^2(\vec{x}, R, t_0)}\\
+	&= \frac{1}{2\pi^2} \int_0^\infty \dd{k} \tilde{W}(k, R) P(k),
+\end{align*}
+which is a result that we have seen before.\sidenote{As a reminder, $\tilde{W}$ is the Fourier transform of the window function, and $P(k)=P(k, t_0)$ is the linear matter-power spectrum today}
+The integral then evaluates to
+\begin{align*}
+	\Prob(>\delta_c(t))
+	= \frac{1}{2} \erf
+	\left[ \frac{\delta_c(t)}{\sqrt{2} \sigma(M)} \right].
+\end{align*}
+
+We use the PS-ansatz by \textsc{Press} and \textsc{Schechter} (1974).
+The mass fraction of collapsed objects with mass greater than $M$ is
+\begin{align*}
+	F(>M)
+	&= 2 \Prob(>\delta_c(t)).
+\end{align*}
+The factor $2$ was found with the following argument.
+In the limit where $M \to 0$, we see that $\sigma(M) \to \infty$ for CDM models.
+As a result,
+\begin{align*}
+	\Prob(>\delta_c(t)) \to \tfrac{1}{2}.
+\end{align*}
+With our ansatz, the mass fraction then goes to 1.
+That means that all the mass in the universe is in a collapsed object of some mass.
+Without the factor of $2$, only half the mass in the universe would be inside this collapsed object.
+
+The factor in the PS-ansatz can be justified in a more solid way by using a formalism called \emph{excursion sets}, which is also called the Extended Press-Schechter (EPS) formalism.
+
+We want to find the number density of collapsed objects with a mass between $M$ and $M + \dd{M}$.
+We try
+\begin{align*}
+	n(M, t)
+	= \frac{\bar{\rho}}{M}
+	\pdv{F(>M)}{M} \dd{M}
+\end{align*}
+The factor $bar{\rho}/M$ is the number of \emph{all} objects per unit volume, if all objects had the mass $M$.
+The next factor is the mass fraction of collapsed objects with mass between $M$ and $M+ \dd{M}$.
+We get
+\begin{align*}
+	n(M, t)
+	&= 2 \frac{\bar{\rho}}{M}
+	\pdv{\Prob(>\delta_c(t))}{\sigma}
+	\abs*{ \dv{\sigma}{M} }
+	\dd{M}.
+\end{align*}
+We plug in
+\begin{align*}
+	\pdv{\Prob(>\delta_c(t))}{\sigma}
+	&=
+	\pdv{}{\sigma} \left[ 
+		\frac{1}{2} \erfc \left( \frac{\delta_c}{2\sigma} \right)
+	 \right]\\
+	&= \frac{1}{\sqrt{2\pi}}
+	\frac{\delta_c}{\sigma^2}
+	\exp\left( - \frac{\delta_c^2}{2 \sigma^2} \right)
+\end{align*}
+and get\sidenote[]{We use
+\begin{align*}
+	\abs*{\dv{\sigma}{M}} = \frac{\sigma}{M} \abs*{\dv{\ln \sigma}{\ln M}}\\
+\end{align*}}
+\begin{align*}
+	n(M, t) \dd{M}
+	&= 2 \frac{\bar{\rho}}{M}
+	\frac{1}{\sqrt{2\pi}}
+	\frac{\delta_c}{\sigma^2}
+	\exp\left( -\frac{\delta_c}{2\sigma^2} \right)
+	\abs*{\dv{\sigma}{M}} \dd{M}\\
+	&= \frac{1}{\sqrt{2\pi}}
+	\frac{\bar{\rho}}{M^2}
+	\frac{\delta_c}{\sigma}
+	\exp\left( -\frac{\delta_c}{2\sigma^2} \right)
+	\abs*{\dv{\ln \sigma}{\ln M}}
+	\dd{M},
+\end{align*}
+which is called the PS Halo mass function.
+Define
+\begin{align*}
+	\nu = \frac{\delta_c(t)}{\sigma(M)}
+\end{align*}
+and rewrite:
+\begin{align*}
+	n(M, t) \dd{M}
+	&= \frac{\bar{\rho}}{M^2} f_\text{PS}(\nu)
+	\abs*{ \dv{\ln \nu}{\ln M} } \dd{M},
+\end{align*}
+where
+\begin{align*}
+	f_\text{PS}(\nu)
+	= \sqrt{\frac{2}{\pi}} \nu \exp\left( - \frac{\nu^2}{2} \right)
+\end{align*}
+is called the Multiplicity function.
+The formula is convenient to express in this way, because the quantities are dimensionless.
+
+% TODO figure
+
+In TODO, we see that $f(\nu)$ from our model (solid line) corresponds acceptably to simulated data.
+The agreement becomes much better when we allow elliptical collapse, which results in
+\begin{align*}
+	f_\text{EC}
+	= A\left( 1 + \frac{1}{\tilde{\nu}^{2q}} \right) f_\text{PS}(\tilde{\nu}),
+\end{align*}
+where $\tilde{\nu} \approx 0.84 \nu$, $q = 0.3$, and $A \approx 0.322$.
+There are also other fitting functions that are commonly used.
+
+Let's look at the shape and evolution of the Mass function, shown in TODO.
+% TODO figure
+The mass function is shown for different redshifts, where time increases from left to right.
+
+The form of the mass function is $n \propto \nu \exp(-\nu^2/2)$, 
+so there is an exponential cut-off for $\nu > 1$,
+which we can see in the plot.
+This corresponds to $M > M_*$, with $\sigma(M_*) = \delta_c(t)$.
+Since in CDM models, $D(t)$ increases with $t$, and $\sigma(M)$ decreases with $M$,
+$M_*$ increases with $t$.
+This means that the cut-off occurs at higher masses as time goes on.
+Thus, small haloes can form first, and massive haloes form later.
+We have already seen this hierarchical structure formation before.
+
+Today, the largest haloes which have formed have masses $M \approx M_* \approx \num{e14} M_\sol$.
+At earlier epochs, the largest haloes were found in dwarf galaxies, with $M \approx \num{e9}$,
+later galaxies with $M \approx \num{e12} M_\sol$,
+and finally galaxy clusters with  $M \approx \num{e13} M_\sol$.
 
 
